# PDB_repair_foldx_2

./: .dockerignore  .ivcap-example.pdb.txt  Dockerfile  FoldX_repair_pdb.py  Makefile  README.md  dictionaries.py  example_prep_Repair.fxout  make_local_test.txt  pyproject.toml  request.json  tool-service.py
tests/: .ivcap-example.pdb.txt  request.json
